Development
-----------

1.1.0 2017-01-09
----------------
* Use a configurable PHPCS standard
* Add pantheon deployment tasks to circle.yml
* Allow skipping bower tasks if bower is not configured.
* Added visual regression testing with BackstopJS
* Added default font stack to Scaffold theme
* Added ability to export junit reports and artifacts from gulp tasks that provide them.
* Exclude all build tools and files from production build.
* Update to Foundation 6.3.0
* Added static Composer validation check
* Added Circle CI test steps
* Added drupal-profile installer support to composer.json

1.0.3 2017-01-09
----------------
* Runs behat and performance tests out of the box with Travis.
* Move docroot into web/
* Update to Drupal core 8.2.x
* Add a debug configuration for docker-compose stack
* Fix docker environment detection
* Compile what-input with Foundation JS
* Specify engines in package.json for better CI detection.

1.0.2, 2016-10-23
------------------
* Add docker-compose stack for easy setup
* Scaffold theme enhancements (add logo, base menu theming, remove compiled assets)
* Properly set git attributes for .svg and .eot
* Remove gitignore for settings*.php - only ignore settings.local.php
* Coder check for .install files too
* Dependency updates (gulp-sourcemaps, gulp-phpcs, Drupal core)

1.0.1, 2016-09-23
-----------------
* Add wysiwyg stylesheet
* No longer include behat.local.yml by default.  Use default settings for `drush rs` (127.0.0.1:8888) for behat base_url.
* Use default settings for `drush rs` (127.0.0.1:8888) for phantomas base url.
* Add csso for CSS optimization.
* Rename build:fonts to build:copy.
* Add imagemin option to build:copy task.
* Don't abort build:scss task on scss error (fixes watch breaking on invalid scss).


1.0.0-beta1, 2016-08-14
-----------------------
* Initial beta release