@@ -9,9 +9,9 @@ default:
   extensions:
     Behat\MinkExtension:
       goutte: ~
-      # The base URL the site can be accessed at.
-      # Change this, or use `drush rs`.
-      base_url: http://127.0.0.1:8888
+      # The base URL of the site.  If you are using the gulp tasks,
+      # this URL is set in the gulpconfig, so leave this commented out.
+      # base_url: http://127.0.0.1:8888
       # Browser open command used for "Then show the last response"
       show_cmd: open %s
     Drupal\DrupalExtension:
