@@ -1,0 +1,8 @@
+url: "${BASE_URL}/"
+# Save a HAR of the homepage for historical purposes.
+# This path is relative to where the binary is invoked.
+har: "./phantomas/artifacts/homepage.har"
+
+# Assertions can be set here.  See https://github.com/macbre/phantomas for more info.
+# assert-requests: 5
+# assert-assets-not-gzipped: 0
